--- a/src/partials/_felix.scss
+++ b/src/partials/_felix.scss
@@ -238,6 +238,8 @@ header{
 				padding: 0.5*$v 1*$v;
 				img{
 					float: left;
+					height: 48px;
+					width: 48px;
 				}
 				
 				p{
